--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@react-icons/all-files": "^4.1.0",
+    "axios": "^0.21.1",
     "firebase": "^8.10.0",
     "formik": "^2.2.9",
     "framer-motion": "^4",
@@ -20,7 +21,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.13.0",
-    "react-responsive": "^9.0.0-beta.3"
+    "react-responsive": "^9.0.0-beta.3",
+    "vercel": "^23.1.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
