--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@emotion/styled": "^11",
     "@react-icons/all-files": "^4.1.0",
     "axios": "^0.21.1",
+    "chakra-ui-steps": "^1.3.0",
     "firebase": "^8.10.0",
     "formik": "^2.2.9",
     "framer-motion": "^4",
     "next": "11.1.0",
+    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.13.0",
+    "react-icons": "^4.2.0",
     "react-responsive": "^9.0.0-beta.3",
     "vercel": "^23.1.2"
   },
