--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.13.0",
     "react-icons": "^4.2.0",
     "react-responsive": "^9.0.0-beta.3",
+    "universal-cookie": "^4.0.4",
     "vercel": "^23.1.2"
   },
   "devDependencies": {
